public/styles.css
body {
  background-color: aquamarine;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  min-height: 10vh;
  width: 95vw;
}

#info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  min-width: 33.3%;
}

#name {
  font-size: xx-large;
}

#title {
  font-size: larger;
}

.links-div {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  min-width: 33%;
}

#github-logo {
  max-width: 3rem;
}

#linkedin-logo {
  max-width: 2rem;
}

#resume-logo {
  max-width: 2.2rem;
  margin-left: 0.35rem;
}

#intro p {
  margin: 0 5rem 0 5rem;
  text-indent: 3rem;
}

#projects {
  display: flex;
  margin-top: 1rem;
}

.project {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  padding-bottom: 1rem;
  width: 50%;
}

.project img {
  max-width: 100%;
  max-height: 40%;
}

.project ul {
  font-size: small;
  list-style-type: none;
}

.project-links {
  display: flex;
  justify-content: center;
}

.project-links a {
  margin: 0 1rem 0 1rem;
}

#war {
  background-color: rgb(0, 128, 0, 0.8);
}

#brdng {
  background-color: rgb(5, 191, 219, 0.8);
}

@media (max-width: 600px) {
  #left-links {
    display: none;
  }

  #header {
    justify-content: space-between;
  }

  #info {
    margin-left: 1rem;
  }

  #right-links {
    margin-right: 1rem;
  }

  #intro p {
    margin: 0 1rem 0 1rem;
    text-indent: 1.5rem;
  }

  #projects {
    flex-direction: column;
    height: fit-content;
  }

  .project {
    width: 100vw;
  }
}

